# normals_Hough

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Normals.h  README.md  example.py  main.cpp  pc_io.cpp  pc_io.h
cgal/: CGAL_normEst.h
cmake/: UseCython.cmake
include/: Normals.h
normals_hough/: setup.py
normals_hough/src/: NormalEstimatorHough.cpp  Normals.h
pcl/: PCL_normEst.h
python/: CMakeLists.txt  NormalEstimatorHough.pyx  c_normEstHough.pxd  normEstHough.cxx  normEstHough.h  setup.py
src/: main.cpp
test_cpp/: CMakeLists.txt
